examples/test/testpolicy6477.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6477
  namespace: namespace366
spec:
  podSelector:
    matchLabels:
      key1: value17
      key36: value29
      key49: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value36
          key14: value15
          key31: value45
      podSelector:
        matchLabels:
          key6: value49
          key0: value22
          key21: value24
